--- a/NOTEBOOKS/REGRESSION_ANNs_on_Structured_DATA.ipynb
+++ b/NOTEBOOKS/REGRESSION_ANNs_on_Structured_DATA.ipynb
@@ -536,14 +536,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
         "id": "O_GW4mSMrcIs",
-        "outputId": "faadce66-f46e-49e0-b438-57c3edd57f0b"
+        "outputId": "3ce55c2c-aec1-4aa3-fc32-4be819dab25c"
       },
       "outputs": [
         {
@@ -551,7 +551,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-d41f7a75-877c-4a26-b0dd-56c6b5d48265\">\n",
+              "  <div id=\"df-55c7e4e8-e7a1-4998-bccc-add40d954a38\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -622,7 +622,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d41f7a75-877c-4a26-b0dd-56c6b5d48265')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-55c7e4e8-e7a1-4998-bccc-add40d954a38')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -673,12 +673,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d41f7a75-877c-4a26-b0dd-56c6b5d48265 button.colab-df-convert');\n",
+              "          document.querySelector('#df-55c7e4e8-e7a1-4998-bccc-add40d954a38 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d41f7a75-877c-4a26-b0dd-56c6b5d48265');\n",
+              "          const element = document.querySelector('#df-55c7e4e8-e7a1-4998-bccc-add40d954a38');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -709,7 +709,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 1
         }
       ],
       "source": [
@@ -737,7 +737,7 @@
       "metadata": {
         "id": "z7AXA1b7ISRF"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -758,87 +758,223 @@
       "metadata": {
         "id": "PH6aIiT4Jm0B"
       },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.datasets import fetch_california_housing\n",
-        "housing = fetch_california_housing()"
-      ],
-      "metadata": {
-        "id": "aotu7RihGTGU"
-      },
       "execution_count": 3,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(housing.DESCR)"
+        "## Build Keras Sequential regression models:\n",
+        "We build three models and evaluate them over the test set.\n",
+        "\n",
+        "**First model**"
       ],
       "metadata": {
-        "id": "Nl03c0JmGVPV",
-        "outputId": "09268306-d86c-4b51-e502-f0ed218d136f",
+        "id": "89mGe9RrKYDT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.layers import Dense,BatchNormalization, Dropout\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "\n",
+        "model_1 = Sequential()\n",
+        "model_1.add(BatchNormalization())\n",
+        "model_1.add(Dense(13, input_shape=(X.shape[1],), kernel_initializer='normal', activation='relu'))\n",
+        "model_1.add(BatchNormalization())\n",
+        "model_1.add(Dense(6, kernel_initializer='normal', activation='relu'))\n",
+        "model_1.add(BatchNormalization())\n",
+        "model_1.add(Dense(1, kernel_initializer='normal'))\n",
+        "\n",
+        "model_1.compile(loss='mean_squared_error', optimizer='adam')\n",
+        "history = model_1.fit(X_train,y_train,validation_split=0.1,epochs=60,verbose=0)\n",
+        "model_1.evaluate(X_test,y_test)"
+      ],
+      "metadata": {
+        "id": "-6fjTG4wK3bB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Second model**"
+      ],
+      "metadata": {
+        "id": "li6oviaGdHYw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.layers import Dense,BatchNormalization, Dropout\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "\n",
+        "model_2=Sequential()\n",
+        "model_2.add(BatchNormalization())\n",
+        "model_2.add(Dense(16,input_shape=(X.shape[1],),activation='relu'))\n",
+        "model_2.add(BatchNormalization())\n",
+        "model_2.add(Dense(8,activation='relu'))\n",
+        "model_2.add(BatchNormalization())\n",
+        "model_2.add(Dense(4,activation='relu'))\n",
+        "model_2.add(Dense(1,activation='linear'))\n",
+        "model_2.compile(loss='mean_squared_error',optimizer='adam')\n",
+        "\n",
+        "history = model_2.fit(X_train,y_train,epochs=60,validation_split=0.1,verbose=0)\n",
+        "model_2.evaluate(X_test,y_test)"
+      ],
+      "metadata": {
+        "id": "jmHDXY9LV8Wj",
+        "outputId": "e68a8e9f-5a72-460f-ea43-9664ddccf424",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            ".. _california_housing_dataset:\n",
-            "\n",
-            "California Housing dataset\n",
-            "--------------------------\n",
-            "\n",
-            "**Data Set Characteristics:**\n",
-            "\n",
-            "    :Number of Instances: 20640\n",
-            "\n",
-            "    :Number of Attributes: 8 numeric, predictive attributes and the target\n",
-            "\n",
-            "    :Attribute Information:\n",
-            "        - MedInc        median income in block group\n",
-            "        - HouseAge      median house age in block group\n",
-            "        - AveRooms      average number of rooms per household\n",
-            "        - AveBedrms     average number of bedrooms per household\n",
-            "        - Population    block group population\n",
-            "        - AveOccup      average number of household members\n",
-            "        - Latitude      block group latitude\n",
-            "        - Longitude     block group longitude\n",
-            "\n",
-            "    :Missing Attribute Values: None\n",
-            "\n",
-            "This dataset was obtained from the StatLib repository.\n",
-            "https://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.html\n",
-            "\n",
-            "The target variable is the median house value for California districts,\n",
-            "expressed in hundreds of thousands of dollars ($100,000).\n",
-            "\n",
-            "This dataset was derived from the 1990 U.S. census, using one row per census\n",
-            "block group. A block group is the smallest geographical unit for which the U.S.\n",
-            "Census Bureau publishes sample data (a block group typically has a population\n",
-            "of 600 to 3,000 people).\n",
-            "\n",
-            "An household is a group of people residing within a home. Since the average\n",
-            "number of rooms and bedrooms in this dataset are provided per household, these\n",
-            "columns may take surpinsingly large values for block groups with few households\n",
-            "and many empty houses, such as vacation resorts.\n",
-            "\n",
-            "It can be downloaded/loaded using the\n",
-            ":func:`sklearn.datasets.fetch_california_housing` function.\n",
-            "\n",
-            ".. topic:: References\n",
-            "\n",
-            "    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\n",
-            "      Statistics and Probability Letters, 33 (1997) 291-297\n",
-            "\n"
+            "129/129 [==============================] - 0s 2ms/step - loss: 0.6458\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6458023190498352"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Third model**"
+      ],
+      "metadata": {
+        "id": "pNY5ZofUeS6z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_3=Sequential()\n",
+        "model_3.add(BatchNormalization())\n",
+        "model_3.add(Dense(64,input_shape=(X.shape[1],),activation='relu'))\n",
+        "model_3.add(BatchNormalization())\n",
+        "model_3.add(Dense(32,activation='relu'))\n",
+        "model_3.add(BatchNormalization())\n",
+        "model_3.add(Dense(16,activation='relu'))\n",
+        "model_3.add(BatchNormalization())\n",
+        "model_3.add(Dense(1,activation='linear'))\n",
+        "model_3.compile(loss='mean_squared_error',optimizer='adam')\n",
+        "#mean_absolute_percentage_error\n",
+        "#'mean_squared_error'\n",
+        "history = model_3.fit(X_train,y_train,epochs=70,validation_split=0.1,verbose=0)\n",
+        "model_3.evaluate(X_test,y_test)"
+      ],
+      "metadata": {
+        "id": "JVna3ky6WZ2O",
+        "outputId": "e667e379-61cc-423f-d64a-37c1a7574928",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "129/129 [==============================] - 0s 2ms/step - loss: 0.5987\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5987129807472229"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Predict with the models"
+      ],
+      "metadata": {
+        "id": "dwhX9CFWf-k2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_to_pred = X_test[1998]\n",
+        "pred1 = model_1.predict(x_to_pred.reshape(1,6))\n",
+        "pred2 = model_2.predict(x_to_pred.reshape(1,6))\n",
+        "pred3 = model_3.predict(x_to_pred.reshape(1,6))\n",
+        "pred1,pred2,pred3\n",
+        "\n",
+        "print(\"Prediction with model_1 :\"+str(pred1[0][0]))\n",
+        "print(\"Prediction with model_2 :\"+str(pred2[0][0]))\n",
+        "print(\"Prediction with model_3 :\"+str(pred3[0][0]))\n",
+        "print(\"The true value :\"+str(y_test[1998]))"
+      ],
+      "metadata": {
+        "id": "GDIW8pQSgOvG",
+        "outputId": "0f24fb16-0b41-4e93-e36c-6b8961a9298f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction with model_1 :2.1040285\n",
+            "Prediction with model_2 :1.9810936\n",
+            "Prediction with model_3 :2.1038597\n",
+            "The true value :2.464\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test[1998]"
+      ],
+      "metadata": {
+        "id": "qZFbRjEvgoT5",
+        "outputId": "db878895-79ef-46ff-8124-8ff1948232d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.464"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
         }
       ]
     },
@@ -848,7 +984,7 @@
         "id": "uMoRF1yMN6qO"
       },
       "source": [
-        "# Exercise :Superconductors critical temperature prediction\n",
+        "# Exercise 1:Superconductors critical temperature prediction\n",
         "The critical temperature for superconductors is the temperature at which the electrical resistivity of a metal drops to zero. \n",
         "**In this exercise, you have to build a model that predicts the critical temperature of superconductors**. First, you have the run the cell below to import and view the head of the dataset. Since the critical temperature is a continuous variable, we are in a regression problem."
       ]
@@ -1690,7 +1826,8 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.9"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
