--- a/NOTEBOOKS/REGRESSION_ANNs_on_Structured_DATA.ipynb
+++ b/NOTEBOOKS/REGRESSION_ANNs_on_Structured_DATA.ipynb
@@ -792,10 +792,32 @@
         "model_1.evaluate(X_test,y_test)"
       ],
       "metadata": {
-        "id": "-6fjTG4wK3bB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-6fjTG4wK3bB",
+        "outputId": "9835730b-c26d-4536-fcc6-ff3ecf34877f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "129/129 [==============================] - 1s 3ms/step - loss: 0.6313\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6312921643257141"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -826,30 +848,30 @@
         "model_2.evaluate(X_test,y_test)"
       ],
       "metadata": {
-        "id": "jmHDXY9LV8Wj",
-        "outputId": "e68a8e9f-5a72-460f-ea43-9664ddccf424",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jmHDXY9LV8Wj",
+        "outputId": "c706f50f-5cf0-4097-bbf1-27eafac00994"
       },
-      "execution_count": 46,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "129/129 [==============================] - 0s 2ms/step - loss: 0.6458\n"
+            "129/129 [==============================] - 1s 4ms/step - loss: 0.5953\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6458023190498352"
+              "0.5953035950660706"
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 5
         }
       ]
     },
@@ -881,30 +903,30 @@
         "model_3.evaluate(X_test,y_test)"
       ],
       "metadata": {
-        "id": "JVna3ky6WZ2O",
-        "outputId": "e667e379-61cc-423f-d64a-37c1a7574928",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JVna3ky6WZ2O",
+        "outputId": "dee0f962-e1b1-4bd5-8fb8-fa48fdea1bf8"
       },
-      "execution_count": 47,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "129/129 [==============================] - 0s 2ms/step - loss: 0.5987\n"
+            "129/129 [==============================] - 1s 3ms/step - loss: 0.5778\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.5987129807472229"
+              "0.5777519345283508"
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 6
         }
       ]
     },
@@ -932,49 +954,23 @@
         "print(\"The true value :\"+str(y_test[1998]))"
       ],
       "metadata": {
-        "id": "GDIW8pQSgOvG",
-        "outputId": "0f24fb16-0b41-4e93-e36c-6b8961a9298f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GDIW8pQSgOvG",
+        "outputId": "3791522e-9dbd-4729-a351-886c4599cc79"
       },
-      "execution_count": 52,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prediction with model_1 :2.1040285\n",
-            "Prediction with model_2 :1.9810936\n",
-            "Prediction with model_3 :2.1038597\n",
+            "Prediction with model_1 :2.0497813\n",
+            "Prediction with model_2 :2.0753012\n",
+            "Prediction with model_3 :2.085502\n",
             "The true value :2.464\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_test[1998]"
-      ],
-      "metadata": {
-        "id": "qZFbRjEvgoT5",
-        "outputId": "db878895-79ef-46ff-8124-8ff1948232d4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2.464"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 42
         }
       ]
     },
@@ -1494,71 +1490,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JFCwDIraN6qR"
-      },
-      "source": [
-        "1) Split the dataset into a training set and a test set using train_test_split.\n",
-        "\n",
-        "\n",
-        "2) Make a neural network, compile it and fit it with TensorFlow.keras to solve this regression problem. \n",
-        "You have to respect the following architecture: \n",
-        "* BatchNormalization layer following the input of the network, \n",
-        "* 3 hidden Dense layers.\n",
-        "* You have to put a Dropout layer with rate 0.1 between the first Dense hidden layer and the second one. \n",
-        "* You have to put a Dropout layer with rate 0.1 between the second hidden layer and the last one.\n",
-        "\n",
-        "You have to train your model with 500 epochs, set verbose=0, and set the batch_size = 10.\n",
-        "\n",
-        "3) Ev\n",
-        "\n",
-        "3) How many trainable parameters does your neural network have? Does a BatchNormalization layer yield trainable parameters."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PSrq2d2NN6qT"
-      },
-      "outputs": [],
-      "source": [
-        "#1)\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=42)\n",
-        "#2)\n",
-        "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, InputLayer\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "\n",
-        "modelreg = Sequential()\n",
-        "modelreg.add(InputLayer(input_shape=(X.shape[1],)))\n",
-        "modelreg.add(BatchNormalization())\n",
-        "modelreg.add(Dense(10,activation='relu'))\n",
-        "modelreg.add(Dropout(0.1))\n",
-        "modelreg.add(Dense(10,activation='relu'))\n",
-        "modelreg.add(Dropout(0.1))\n",
-        "modelreg.add(Dense(10,activation='relu'))\n",
-        "modelreg.add(Dense(1))\n",
-        "\n",
-        "modelreg.compile(optimizer='adam',loss='mae',metrics='mae')\n",
-        "\n",
-        "#we train modelreg\n",
-        "modelreg.fit(X_train,y_train,epochs=500,batch_size=10,verbose=0)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fsynuGwiN6qU"
-      },
-      "outputs": [],
-      "source": [
-        "modelreg.evaluate(X_test,y_test)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "LK16WWmXYJw9"
       },
       "source": [
@@ -1575,7 +1506,7 @@
       "source": [
         "#your code her\n",
         "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=42)"
+        "X_train, X_test, y_train, y_test = "
       ]
     },
     {
@@ -1608,17 +1539,7 @@
         "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, InputLayer\n",
         "from tensorflow.keras.models import Sequential\n",
         "\n",
-        "modelreg = Sequential()\n",
-        "modelreg.add(InputLayer(input_shape=(X.shape[1],)))\n",
-        "modelreg.add(BatchNormalization())\n",
-        "modelreg.add(Dense(10,activation='relu'))\n",
-        "modelreg.add(Dropout(0.1))\n",
-        "modelreg.add(Dense(10,activation='relu'))\n",
-        "modelreg.add(Dropout(0.1))\n",
-        "modelreg.add(Dense(10,activation='relu'))\n",
-        "modelreg.add(Dense(1))\n",
-        "\n",
-        "modelreg.compile(optimizer='adam',loss='mae',metrics='mae')"
+        "modelreg = Sequential()\n"
       ]
     },
     {
@@ -1641,7 +1562,7 @@
       },
       "outputs": [],
       "source": [
-        "history = modelreg.fit(X_train,y_train,epochs=500,batch_size=10,verbose=0,validation_split=0.1)"
+        ""
       ]
     },
     {
@@ -1655,35 +1576,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qWLtIlbqgtKr",
-        "outputId": "e9743566-5241-4656-dd7c-5b28a1f07227"
+        "id": "qWLtIlbqgtKr"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "220/220 [==============================] - 0s 1ms/step - loss: 9.7068 - mae: 9.7068\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[9.706753730773926, 9.706753730773926]"
-            ]
-          },
-          "execution_count": 28,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "modelreg.evaluate(X_test,y_test)"
+        ""
       ]
     },
     {
@@ -1697,48 +1596,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HBzwR1CyhM6B",
-        "outputId": "af2cbb52-56f2-4462-f054-b792501dcbae"
+        "id": "HBzwR1CyhM6B"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Model: \"sequential_2\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " batch_normalization_4 (Batc  (None, 81)               324       \n",
-            " hNormalization)                                                 \n",
-            "                                                                 \n",
-            " dense_10 (Dense)            (None, 10)                820       \n",
-            "                                                                 \n",
-            " dropout_8 (Dropout)         (None, 10)                0         \n",
-            "                                                                 \n",
-            " dense_11 (Dense)            (None, 10)                110       \n",
-            "                                                                 \n",
-            " dropout_9 (Dropout)         (None, 10)                0         \n",
-            "                                                                 \n",
-            " dense_12 (Dense)            (None, 10)                110       \n",
-            "                                                                 \n",
-            " dense_13 (Dense)            (None, 1)                 11        \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 1,375\n",
-            "Trainable params: 1,213\n",
-            "Non-trainable params: 162\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "modelreg.summary()"
+        ""
       ]
     },
     {
@@ -1752,55 +1616,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9wsYjEBDmVvb",
-        "outputId": "6d418608-3cf0-4cd8-ab47-174de266f8ec"
+        "id": "9wsYjEBDmVvb"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([[6.961995]], dtype=float32)"
-            ]
-          },
-          "execution_count": 32,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "supra_to_test = X_test[30]\n",
-        "modelreg.predict(X_test[30].reshape(1,81))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qrqun749nMPs",
-        "outputId": "d25c40df-845b-42b5-fc60-602a31e4997f"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "6.5"
-            ]
-          },
-          "execution_count": 33,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "y_test[30]"
+        "supra_to_test = X_test[30]"
       ]
     }
   ],
