--- a/NOTEBOOKS/time_series_forcasting_Project.ipynb
+++ b/NOTEBOOKS/time_series_forcasting_Project.ipynb
@@ -1177,7 +1177,7 @@
         "Before, to start this assignment, I recommend you read the above example.<br><br>\n",
         "The example in this notebook shows you how to design, use deep learning models to predict the stock price the next day. We mainly use LSTM and CNN.<br><br>\n",
         "\n",
-        "We evaluate these models over a test set. We also plot our predicted Stock Price and the Stock price together to have an idea of how well are our model.<br>\n",
+        "We evaluate these models over a test set. We also plot our predicted Stock Price and the Stock price together to have an idea of how well are our models.<br>\n",
         "\n",
         "**The goal of this exercise is to build models that predict stock price the next week**. In this exercice, you have to : \n",
         "* build deep learning models\n",
@@ -1185,7 +1185,7 @@
         "* Improve the way to  check the efficacity of the models\n",
         "* compare the models you will build \n",
         "\n",
-        "The dataset for this exercie could be \n",
+        "The dataset for this exercise could be \n",
         "* the one we use in this notebook\n",
         "* Another daily stock price dataset from a company of your interested \n",
         "\n",
