--- a/NOTEBOOKS/transformers_with_tensorflow_hub.ipynb
+++ b/NOTEBOOKS/transformers_with_tensorflow_hub.ipynb
@@ -21,11 +21,22 @@
     },
     "colab": {
       "name": "transformers-with-tensorflow-hub.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fabnancyuhp/DEEP-LEARNING/blob/main/NOTEBOOKS/transformers_with_tensorflow_hub.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -59,7 +70,7 @@
         "#tf.__version__\n",
         "!pip install -U tensorflow-text==2.6.0 "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +124,7 @@
         "preprocessor = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3\")\n",
         "encoder = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\",trainable=True)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +151,7 @@
         "text_sample = ['it is a tensorflow_hub presentation','use bert using pre-trained model from tensorflow']\n",
         "encoder(preprocessor(text_sample))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +167,7 @@
       "source": [
         "encoder(preprocessor(text_sample))['pooled_output']"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,7 +219,7 @@
         "text_sample = ['it is a tensorflow_hub presentation','use bert using pre-trained model from tensorflow']\n",
         "encoder(preprocessor(text_sample))['pooled_output']"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +277,7 @@
         "def _remove_emails(x):\n",
         "    return re.sub(r'([a-z0-9+._-]+@[a-z0-9+._-]+\\.[a-z0-9+_-]+)',\"\", x)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +306,7 @@
         "spam_ham['email'] = spam_ham['email'].apply(lambda x:_remove_emails(str(x)))\n",
         "spam_ham.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,7 +425,7 @@
         "spam_ham_more_balanced = pd.concat([df_spam,df_ham_down_sample])\n",
         "spam_ham_more_balanced['label'].value_counts()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +470,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size=0.20, stratify=Y,random_state=42)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -501,7 +512,7 @@
         "\n",
         "#bert_results = bert_model(text_preprocessed)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +559,7 @@
         "\n",
         "BERT_MODEL = Model(inputs=[text_input],outputs=[output_layer])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +586,7 @@
       "source": [
         "BERT_MODEL.summary()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +644,7 @@
         "METRICS = [BinaryAccuracy(name='accuracy'), Precision(name='precision'), Recall(name='recall')]\n",
         "BERT_MODEL.compile(optimizer='adam',loss='binary_crossentropy',metrics=METRICS)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -661,7 +672,7 @@
       "source": [
         "BERT_MODEL.fit(X_train, y_train,epochs=20)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +695,7 @@
       "source": [
         "BERT_MODEL.evaluate(X_test,y_test)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +756,7 @@
         "import seaborn as sn\n",
         "sn.heatmap(cm,annot=True,fmt='d')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -804,7 +815,7 @@
         "if pred_mail[0]>0.5:\n",
         "    print(\"the model predict a spam for the new mail: \" +str(pred_mail[0]))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,7 +880,7 @@
         "\n",
         "topic_news.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,7 +989,7 @@
         "preprocess = hub.KerasLayer('https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3')\n",
         "bert = hub.KerasLayer('https://tfhub.dev/google/experts/bert/pubmed/squad2/2')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1031,7 @@
         "plt.figure(figsize=(10,6))\n",
         "sns.countplot(x='subject',data=topic_news)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1074,7 +1085,7 @@
         "topic_news['text'] = topic_news['text'].apply(lambda x:_remove_urls(str(x)))\n",
         "topic_news['text'] = topic_news['text'].apply(lambda x:_remove_emails(str(x)))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +1123,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size=0.20, stratify=Y,random_state=42)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1159,7 +1170,7 @@
         "\n",
         "BERT_MODEL = Model(inputs=[text_input],outputs=[output_layer])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1178,7 +1189,7 @@
       "source": [
         "BERT_MODEL.compile(optimizer='adam',metrics=['accuracy'],loss='categorical_crossentropy')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1210,7 +1221,7 @@
       "source": [
         "BERT_MODEL.fit(X_train,y_train,epochs=10)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1270,7 +1281,7 @@
       "source": [
         "BERT_MODEL.evaluate(X_test,y_test)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,7 +1345,7 @@
         "import seaborn as sn\n",
         "sn.heatmap(cm,annot=True,fmt='d')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1402,7 +1413,7 @@
         "who launched the crackdown, on Tuesday. Duterte this month ordered the police \\\n",
         "to return to the drugs war, following a near eight-week layoff, but in a supporting role only.\"]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1425,7 +1436,7 @@
       "source": [
         "le.inverse_transform([np.argmax(BERT_MODEL.predict(new_text))])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
